# fastapi_pytorch_postgresql_sandbox

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  Makefile  README.md  alembic.ini  codecov.yml  conda.requirements.txt  condalock.yaml  env.sample  installed_conda.txt  installed_pip.txt  invoke.yaml  meta.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.csv
.ci/lima/: github-ci.yaml
.github/workflows/: ci.yml  tests.yml
.streamlit/: config.toml
continuous_integration/: environment-3.10-dev.yaml
contrib/: automate_docblocks.py  collect_env.py  download-model.sh
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml  otel-collector-config.yml
deploy/autodocstring/: Dockerfile  Makefile
environments-and-requirements/: environment-lin-aarch64.yml  environment-lin-amd.yml  environment-lin-cuda.yml  environment-mac-intel.yml  environment-mac.yml  environment-win-cuda.yml  requirements-lin-cuda.txt  requirements-strict.txt
fastapi_pytorch_postgresql_sandbox/: __init__.py  __main__.py  cli.py  conftest.py  gpt.py  logging.py  retry.py  settings.py  worker.py
fastapi_pytorch_postgresql_sandbox/db/: base.py  config.py  meta.py  utils.py
fastapi_pytorch_postgresql_sandbox/db/dao/: dummy_dao.py
fastapi_pytorch_postgresql_sandbox/db/migrations/: env.py
fastapi_pytorch_postgresql_sandbox/db/migrations/versions/: 2021-08-16-16-55_2b7380507a71.py
fastapi_pytorch_postgresql_sandbox/db/models/: __init__.py  dummy_model.py
fastapi_pytorch_postgresql_sandbox/deeplearning/architecture/screennet/: __init__.py  config.py  ml_model.py  predictions.py  train.py
fastapi_pytorch_postgresql_sandbox/deeplearning/common/: __init__.py  devices.py  errors.py
fastapi_pytorch_postgresql_sandbox/factories/: __init__.py  cmd_factory.py
fastapi_pytorch_postgresql_sandbox/ml_client/: __init__.py  _errors.py  _http_client.py  _logging.py  _types.py  _utils.py  _version.py  client.py  consts.py
fastapi_pytorch_postgresql_sandbox/ml_client/clients/: __init__.py
fastapi_pytorch_postgresql_sandbox/ml_client/clients/base/: __init__.py  actor_job_base_client.py  base_client.py  resource_client.py  resource_collection_client.py
fastapi_pytorch_postgresql_sandbox/ml_client/clients/resource_clients/: __init__.py  actor.py  actor_collection.py  actor_env_var.py  actor_env_var_collection.py  actor_version.py  actor_version_collection.py  build.py  build_collection.py  dataset.py  dataset_collection.py  key_value_store.py  key_value_store_collection.py  log.py  request_queue.py  request_queue_collection.py  run.py  run_collection.py  schedule.py  schedule_collection.py  task.py  task_collection.py  user.py  webhook.py  webhook_collection.py  webhook_dispatch.py  webhook_dispatch_collection.py
fastapi_pytorch_postgresql_sandbox/services/: __init__.py
fastapi_pytorch_postgresql_sandbox/services/kafka/: dependencies.py  lifetime.py
fastapi_pytorch_postgresql_sandbox/services/rabbit/: dependencies.py  lifetime.py
fastapi_pytorch_postgresql_sandbox/services/redis/: dependency.py  lifetime.py
fastapi_pytorch_postgresql_sandbox/services/screennet/: __init__.py  dependency.py  lifetime.py
fastapi_pytorch_postgresql_sandbox/tests/: __init__.py  test_cli.py  test_deeplearning_architecture_screennet_ml_model.py  test_deeplearning_common_devices.py  test_dummy.py  test_echo.py  test_fastapi_pytorch_postgresql_sandbox.py  test_kafka.py  test_rabbit.py  test_redis.py  test_screennet.py  test_settings.py  test_watermark_versions.py
fastapi_pytorch_postgresql_sandbox/utils/: __init__.py  file_functions.py  imgops.py  mlops.py  shell.py
fastapi_pytorch_postgresql_sandbox/web/: __init__.py  application.py  driver.py  lifetime.py
fastapi_pytorch_postgresql_sandbox/web/api/: __init__.py  router.py
fastapi_pytorch_postgresql_sandbox/web/api/docs/: __init__.py
fastapi_pytorch_postgresql_sandbox/web/api/dummy/: __init__.py  views.py
fastapi_pytorch_postgresql_sandbox/web/api/echo/: __init__.py  views.py
fastapi_pytorch_postgresql_sandbox/web/api/kafka/: __init__.py  schema.py  views.py
fastapi_pytorch_postgresql_sandbox/web/api/monitoring/: __init__.py  views.py
fastapi_pytorch_postgresql_sandbox/web/api/rabbit/: __init__.py  schema.py  views.py
fastapi_pytorch_postgresql_sandbox/web/api/redis/: __init__.py  schema.py  views.py
fastapi_pytorch_postgresql_sandbox/web/api/screennet/: __init__.py  schema.py  views.py
fastapi_pytorch_postgresql_sandbox/web/api/videocrop/: __init__.py  schema.py  views.py
fastapi_pytorch_postgresql_sandbox/web/ray_impl/: script.py
lint-configs-python/python/: mypy.ini  pylintrc
scripts/: open-browser.py  test-classify.sh
tasks/: ci.py  constants.py  local.py  ml_logger.py  utils.py
